# dconfjson

./: .gitignore  README.md  makefile  setup.cfg  setup.py
dconfjson/: __init__.py  to_dconf.py  to_json.py
