[metadata]
name = dconfjson
version = 0.2.4
requires-python = ">=3.*"
author = saberd
author_email = mail@saberd.com
url = https://github.com/saberd/dconfjson
description = Convert gnome settings between binary conf files and json
long_description = file: README.md
long_description_content_type = text/markdown
keywords = ubuntu, gnome, config, dconf, json
license = BSD 3-Clause License
classifiers =
    Topic :: Desktop Environment :: Gnome
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Topic :: Utilities    

[options]
packages = find:
zip_safe = True
include_package_data = True

[options.entry_points]
console_scripts = 
    dconfjson=dconfjson.main:main